Created a new file named complex.cpp with header file complex.h to contain the function "multiply()" which is a vectorized multiplication operation for large arrays of complex numbers. This can be used to speed up our kernels which have to execute many multiplications with arrays of complex numbers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.5)
 project(Serial)
 
 set(CXX g++-5)                                                  # Use g++ version 5 for openMP
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")   # Use c++11 and openMP
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp -ftree-vectorize -fopt-info-vec -O3")   # Use c++11 and openMP
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp -ftree-vectorize -fopt-info-vec -O3 -mavx")
 
 set(SOURCE_FILES
         quadtree.cpp
@@ -11,7 +12,7 @@ set(SOURCE_FILES
         test.cpp
         timeMorton.cpp
         expansion.cpp
-        )
+        complex.cpp)
 
 set(HEADER_FILES
         morton.h
@@ -20,6 +21,6 @@ set(HEADER_FILES
         timeMorton.h
         timer.hpp
         expansion.h
-        )
+        complex.h)
 
 add_executable(Serial ${SOURCE_FILES} ${HEADER_FILES})
